--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3154,7 +3154,7 @@
 		-ms-transition: -ms-transform 0.5s ease;
 		transition: transform 0.5s ease;
 		-webkit-overflow-scrolling: touch;
-		background: #FA543B;	<!-- SIDE MENU COLOR -->
+		background: #FA543B;								<!-- SIDE MENU COLOR -->
 		color: #ffffff;
 		height: 100%;
 		max-width: 80%;
@@ -3248,7 +3248,7 @@
 		-webkit-transition: background-color 0.2s ease;
 		-ms-transition: background-color 0.2s ease;
 		transition: background-color 0.2s ease;
-		background: #FA543B; <!-- BANNER COLOR -->
+		background: #fa543b; 								<!-- BANNER COLOR -->
 		height: 3em;
 		left: 0;
 		line-height: 3em;
