--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2668,11 +2668,11 @@
 			}
 
 			.wrapper.style1 header.major p {
-				color: #c7ebe8;
+				color: #ffffff;								<!-- Color For Something //-->	
 			}
 
 			.wrapper.style1 label {
-				color: #ffffff;
+				color: #ffffff;								<!-- COLOR //-->
 			}
 
 			.wrapper.style1 input[type="text"],
@@ -3154,7 +3154,7 @@
 		-ms-transition: -ms-transform 0.5s ease;
 		transition: transform 0.5s ease;
 		-webkit-overflow-scrolling: touch;
-		background: #FA543B;								<!-- SIDE MENU COLOR -->
+		background: #FA543B;								<!-- SIDE MENU COLOR //-->
 		color: #ffffff;
 		height: 100%;
 		max-width: 80%;
@@ -3248,7 +3248,7 @@
 		-webkit-transition: background-color 0.2s ease;
 		-ms-transition: background-color 0.2s ease;
 		transition: background-color 0.2s ease;
-		background: #fa543b; 								<!-- BANNER COLOR -->
+		background: #fa543b; 								<!-- BANNER COLOR //-->
 		height: 3em;
 		left: 0;
 		line-height: 3em;
