--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2789,11 +2789,11 @@
 			}
 
 		.wrapper.style2 {
-			background-color: #2e3842;
+			background-color: #CC163C;
 		}
 
 		.wrapper.style3 {
-			background-color: #505393;
+			background-color: #CC163C;
 			color: #d3d4e4;
 		}
 
