--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1390,7 +1390,7 @@
 	}
 
 	body {
-		background: #2e3842;
+		background: #ffffff; <!--COLOR-->
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
