--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1390,7 +1390,7 @@
 	}
 
 	body {
-		background: #ffffff; <!--COLOR-->
+		background: #FFC536; <!--MENU TRANS COLOR-->
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
@@ -2422,7 +2422,7 @@
 
 			.features li:before {
 				display: block;
-				color: #00ffcc;
+				color: #ffffff;  	<!--COLOR-->
 				position: absolute;
 				left: 1.75em;
 				top: 2.75em;
