--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1390,7 +1390,7 @@
 	}
 
 	body {
-		background: #FFC536; <!--MENU TRANS COLOR-->
+		background: #FA543B; <!--MENU TRANS COLOR-->
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
