--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3695,7 +3695,7 @@
 
 	#footer {
 		padding: 6em 0 4em 0 ;
-		background-color: #1d242a;
+		background-color: #FA543B;
 		text-align: center;
 	}
 
@@ -3804,5 +3804,5 @@
 	}
 
 	body.is-mobile.landing #footer {
-		background-color: #1d242a;
+		background-color: #FA543B;
 	}
