--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2635,7 +2635,7 @@
 		}
 
 		.wrapper.style1 {
-			background-color: #ffc536;					<!--COLOR-->
+			background-color: #FA543B;					<!--COLOR-->
 			color: #ffffff;
 		}
 
