--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1817,7 +1817,7 @@ input, select, textarea {
 		left: 0;
 		top: 0;
 		width: 100%;
-		background: rgba(225, 35, 1, 0.95);
+		background: rgba(255, 54, 54, 0.7);
 		height: 3em;
 		line-height: 3em;
 		box-shadow: 0 0 0.15em 0 rgba(0, 0, 0, 0.1);
@@ -2161,8 +2161,8 @@ input, select, textarea {
 		margin: 0;
 		line-height: 1em;
 		padding: 1.5em;
-		background: #39454b;
-		color: rgba(185, 186, 187, 0.5);
+		background: #f23537;
+		color: rgba(255, 255, 255, 0.5);
 		overflow: hidden;
 	}
 
