--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -621,7 +621,7 @@ input, select, textarea {
 /* Box */
 
 	.box {
-		background: #ffffff;
+		background: url(images/intro.jpg);
 		color: #39454b;
 		padding: 2em;
 	}
