--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -719,7 +719,7 @@ input, select, textarea {
 		input[type="reset"]:hover,
 		.button:hover,
 		button:hover {
-			background-color: #a8cea4;
+			background-color: #FF7D3C;
 		}
 
 		input[type="button"]:active,
@@ -727,7 +727,7 @@ input, select, textarea {
 		input[type="reset"]:active,
 		.button:active,
 		button:active {
-			background-color: #88bc82;
+			background-color: #FF3636;
 		}
 
 		input[type="button"].style2,
