--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -622,7 +622,7 @@ input, select, textarea {
 
 	.box {
 		background: url(images/intro.jpg);
-		color: #39454b;
+		color: #FFFFFF;
 		padding: 2em;
 	}
 
@@ -736,7 +736,7 @@ input, select, textarea {
 		.button.style2,
 		button.style2 {
 			background-color: transparent;
-			border: solid 2px #e5e6e7;
+			border: solid 2px #B1B9FF;
 			color: inherit;
 		}
 
