--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -621,8 +621,8 @@ input, select, textarea {
 /* Box */
 
 	.box {
-		background: url(images/intro.jpg);
-		color: #FFFFFF;
+		background: rgb(255, 0, 0);
+		color: #090b0b;
 		padding: 2em;
 	}
 
