--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -618,11 +618,11 @@ input, select, textarea {
 		margin-bottom: 1em;
 	}
 
-/* Box */
+/* Box For Title Cards */
 
 	.box {
-		background: rgb(255, 0, 0);
-		color: #090b0b;
+		background: rgb(255, 255, 255);
+		color: #1C1C1C;
 		padding: 2em;
 	}
 
@@ -719,7 +719,7 @@ input, select, textarea {
 		input[type="reset"]:hover,
 		.button:hover,
 		button:hover {
-			background-color: #FF7D3C;
+			background-color: #FF7D3C; /*form hover*/
 		}
 
 		input[type="button"]:active,
@@ -727,7 +727,7 @@ input, select, textarea {
 		input[type="reset"]:active,
 		.button:active,
 		button:active {
-			background-color: #FF3636;
+			background-color: #FFFFFF; /*form background*/
 		}
 
 		input[type="button"].style2,
